--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "wingcss": "^1.0.0-beta"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
